TESB-22903:Event monitoring:added commands & default config files

--- a/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.eventadmin-sam.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.eventadmin-sam.cfg
@@ -1,1 +1,12 @@
+#####################################
+# Decanter EventAdmin Collector for Talend SAM events
+#####################################
+
+# EventAdmin topics to listen
 event.topics=org/talend/esb/sam/events
+
+# Field configuration
+fields.add.category = sam
+
+# Custom fields
+#key=value
