--- a/auxiliary-storage/persistence-jcr/pom.xml
+++ b/auxiliary-storage/persistence-jcr/pom.xml
@@ -66,6 +66,12 @@
             <groupId>org.apache.jackrabbit</groupId>
             <artifactId>jackrabbit-core</artifactId>
             <version>${jackrabbit.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.derby</groupId>
+                    <artifactId>derby</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
