Fix TESB-23608 adding cxf-jackson as boot feature

--- a/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -66,6 +66,7 @@ featuresBoot=\
     eventadmin, \
     cxf-abdera, \
     cxf, \
+    cxf-jackson, \
     cxf-commands), \
     activemq-client, \
     camel, \
