removed the socket support & added default config for collector.log

--- a/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.eventadmin-framework.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.eventadmin-framework.cfg
@@ -12,6 +12,7 @@ fields.add.eventUUID = UUID
 fields.rename.event.topics = logMessage
 fields.add.category = osgi
 fields.add.eventType = OSGiEvent
+fields.remove.subject = true
 
 # Custom fields
 #key=value
