--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -709,7 +709,7 @@
                                     <outputDirectory>target/dependencies</outputDirectory>
                                     <destFileName>camel-cxf-${camel.version}-TESB.jar</destFileName>
                                 </artifactItem>
-                                <!-- patch for decanter bundles (TESB-23679) -->
+                                <!-- patch for decanter bundles (TESB-23679, TESB-23697) -->
                                 <artifactItem>
                                     <groupId>org.apache.karaf.decanter</groupId>
                                     <artifactId>apache-karaf-decanter</artifactId>
@@ -725,6 +725,13 @@
                                     <version>${decanter.version}.tesb1</version>
                                     <outputDirectory>target/dependencies</outputDirectory>
                                     <destFileName>org.apache.karaf.decanter.appender.log-${decanter.version}.tesb1.jar</destFileName>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.karaf.decanter.collector</groupId>
+                                    <artifactId>org.apache.karaf.decanter.collector.jms</artifactId>
+                                    <version>${decanter.version}.tesb1</version>
+                                    <outputDirectory>target/dependencies</outputDirectory>
+                                    <destFileName>org.apache.karaf.decanter.collector.jms-${decanter.version}.tesb1.jar</destFileName>
                                 </artifactItem>
                             </artifactItems>
 						</configuration>
@@ -1077,11 +1084,14 @@
                                         token="&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xstream/1.4.8_1&lt;"
                                         value="&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xstream/1.4.10_1&lt;"/>
                                 </replace>
-                                <!-- patch for decanter bundles (TESB-23679) -->
+                                <!-- patch for decanter bundles (TESB-23679, TESB-23697) -->
                                 <replace file="target/dependencies/apache-karaf-decanter-${decanter.version}-features.xml">
                                     <replacefilter
                                         token="&gt;mvn:org.apache.karaf.decanter.appender/org.apache.karaf.decanter.appender.log/${decanter.version}&lt;"
                                         value="&gt;mvn:org.apache.karaf.decanter.appender/org.apache.karaf.decanter.appender.log/${decanter.version}.tesb1&lt;"/>
+                                    <replacefilter
+                                        token="&gt;mvn:org.apache.karaf.decanter.collector/org.apache.karaf.decanter.collector.jms/${decanter.version}&lt;"
+                                        value="&gt;mvn:org.apache.karaf.decanter.collector/org.apache.karaf.decanter.collector.jms/${decanter.version}.tesb1&lt;"/>
                                 </replace>
                             </target>
                         </configuration>
