TESB-33570: default config files updated, socket support removed, commands updated

--- a/talend-esb/src/main/distribution/text/container/etc/org.ops4j.pax.logging.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.ops4j.pax.logging.cfg
@@ -98,3 +98,23 @@ log4j2.appender.osgi.filter = *
 # Jetty logger
 log4j2.logger.jetty.name = org.eclipse.jetty
 log4j2.logger.jetty.level = ERROR
+
+# Event Monitoring logger
+log4j2.logger.eventmonitoring.name = org.apache.karaf.decanter.appender.log.LogAppender
+log4j2.logger.eventmonitoring.level = INFO
+log4j2.logger.eventmonitoring.appenderRef.EventMonitoring.ref = EventMonitoringAppender
+
+# Event Monitoring appender
+log4j2.appender.eventmonitoring.type = RollingRandomAccessFile
+log4j2.appender.eventmonitoring.name = EventMonitoringAppender
+log4j2.appender.eventmonitoring.fileName = ${karaf.data}/eventmonitoring/em.log
+log4j2.appender.eventmonitoring.filePattern = ${karaf.home}/eventmonitoring/em.log.%i
+log4j2.appender.eventmonitoring.immediateFlush = true
+log4j2.appender.eventmonitoring.append = true
+log4j2.appender.eventmonitoring.layout.type = PatternLayout
+log4j2.appender.eventmonitoring.layout.pattern = %m\n
+log4j2.appender.eventmonitoring.policies.type = Policies
+log4j2.appender.eventmonitoring.policies.size.type = SizeBasedTriggeringPolicy
+log4j2.appender.eventmonitoring.policies.size.size = 500MB
+log4j2.appender.eventmonitoring.strategy.type = DefaultRolloverStrategy
+log4j2.appender.eventmonitoring.strategy.max = 10
