--- a/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.jms.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.jms.cfg
@@ -16,3 +16,12 @@ destination.type=queue
 
 # Connection password
 # password=
+
+# Field configuration
+fields.add.serverTimestamp = TIMESTAMP
+fields.add.logTimestamp = TIMESTAMP
+fields.add.eventUUID = UUID
+fields.rename.event.topics = logMessage
+fields.add.category = osgi
+fields.add.eventType = OSGiEvent
+fields.remove.subject = true
