--- a/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.eventadmin-sam.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.eventadmin-sam.cfg
@@ -7,6 +7,7 @@ event.topics=org/talend/esb/sam/events
 
 # Field configuration
 fields.add.category = sam
+fields.add.agentId = agent1
 
 # Custom fields
 #key=value
