--- a/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.log.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.log.cfg
@@ -16,3 +16,4 @@ fields.rename.MDC customInfo
 fields.rename.level severity
 fields.rename.renderedMessage logMessage
 fields.remove.timestamp true
+fields.add.agentId = agent1
