--- a/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.eventadmin-karaf.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.eventadmin-karaf.cfg
@@ -13,6 +13,7 @@ fields.rename.event.topics = logMessage
 fields.add.category = osgi
 fields.add.eventType = OSGiEvent
 fields.remove.subject = true
+fields.add.agentId = agent1
 
 # Custom fields
 #key=value
