TESB-33570: rolling file appender config updated

--- a/talend-esb/src/main/distribution/text/container/etc/org.ops4j.pax.logging.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.ops4j.pax.logging.cfg
@@ -108,7 +108,7 @@ log4j2.logger.eventmonitoring.appenderRef.EventMonitoring.ref = EventMonitoringA
 log4j2.appender.eventmonitoring.type = RollingRandomAccessFile
 log4j2.appender.eventmonitoring.name = EventMonitoringAppender
 log4j2.appender.eventmonitoring.fileName = ${karaf.data}/eventmonitoring/em.log
-log4j2.appender.eventmonitoring.filePattern = ${karaf.home}/eventmonitoring/em.log.%i
+log4j2.appender.eventmonitoring.filePattern = ${karaf.data}/eventmonitoring/em.log.%i
 log4j2.appender.eventmonitoring.immediateFlush = true
 log4j2.appender.eventmonitoring.append = true
 log4j2.appender.eventmonitoring.layout.type = PatternLayout
