TESB-23570: logstash config updated, agentId is added to collectors

--- a/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.jms.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.jms.cfg
@@ -25,3 +25,4 @@ fields.rename.event.topics = logMessage
 fields.add.category = osgi
 fields.add.eventType = OSGiEvent
 fields.remove.subject = true
+fields.add.agentId = agent1
