TESB-23570 Eventmonitoring logger config is updated to avoid Log Events processing by another loggers

--- a/talend-esb/src/main/distribution/text/container/etc/org.ops4j.pax.logging.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.ops4j.pax.logging.cfg
@@ -103,6 +103,7 @@ log4j2.logger.jetty.level = ERROR
 log4j2.logger.eventmonitoring.name = org.apache.karaf.decanter.appender.log.LogAppender
 log4j2.logger.eventmonitoring.level = INFO
 log4j2.logger.eventmonitoring.appenderRef.EventMonitoring.ref = EventMonitoringAppender
+log4j2.logger.eventmonitoring.additivity = false
 
 # Event Monitoring appender
 log4j2.appender.eventmonitoring.type = RollingRandomAccessFile
