TESB-12570 : indentation corrected for yml and message field to be removed from event json

--- a/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.eventadmin-framework.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.eventadmin-framework.cfg
@@ -14,6 +14,7 @@ fields.add.category = osgi
 fields.add.eventType = OSGiEvent
 fields.remove.subject = true
 fields.add.agentId = agent1
+fields.remove.message = true
 
 # Custom fields
 #key=value
