--- a/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.eventadmin-sam.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.eventadmin-sam.cfg
@@ -8,6 +8,7 @@ event.topics=org/talend/esb/sam/events
 # Field configuration
 fields.add.category = sam
 fields.add.agentId = agent1
+fields.remove.message = true
 
 # Custom fields
 #key=value
