--- a/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.eventadmin-karaf.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.eventadmin-karaf.cfg
@@ -14,6 +14,7 @@ fields.add.category = osgi
 fields.add.eventType = OSGiEvent
 fields.remove.subject = true
 fields.add.agentId = agent1
+fields.remove.message = true
 
 # Custom fields
 #key=value
