--- a/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.jms.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.jms.cfg
@@ -26,3 +26,4 @@ fields.add.category = osgi
 fields.add.eventType = OSGiEvent
 fields.remove.subject = true
 fields.add.agentId = agent1
+fields.remove.message = true
