--- a/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.log.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.log.cfg
@@ -17,3 +17,4 @@ fields.rename.level severity
 fields.rename.renderedMessage logMessage
 fields.remove.timestamp true
 fields.add.agentId = agent1
+fields.remove.message = true
