--- a/talend-sapjco3-connector/pom.xml
+++ b/talend-sapjco3-connector/pom.xml
@@ -5,11 +5,18 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.talend.sap</groupId>
+    <groupId>org.talend.esb.sap</groupId>
     <artifactId>talend-sapjco3-connector</artifactId>
     <version>5.5.0</version>
     <packaging>bundle</packaging>
     <name>Talend SAPJCo3 Connector</name>
+
+    <parent>
+        <groupId>org.talend.esb</groupId>
+        <artifactId>esb-parent</artifactId>
+        <version>7.2.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
     <build>
         <plugins>
