--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -904,6 +904,7 @@
 										<include name="**/target/*.jar" />
                                         <patternset refid="no.sources.javadoc"/>
 									</fileset>
+									<flattenmapper />
 								</copy>
                                 <copy todir="target/add-ons/registry/lib">
                                     <fileset dir="${basedir}/../policies">
