--- a/examples/cxf/dev-guide-java-first/pom.xml
+++ b/examples/cxf/dev-guide-java-first/pom.xml
@@ -57,6 +57,11 @@
                <path>/${project.build.finalName}</path>
             </configuration>
          </plugin>
+         <plugin>
+             <groupId>org.apache.maven.plugins</groupId>
+             <artifactId>maven-surefire-plugin</artifactId>
+             <version>2.22.1</version>
+         </plugin>
       </plugins>
    </build>
 
