--- a/examples/cxf/dev-guide-wsdl-first/pom.xml
+++ b/examples/cxf/dev-guide-wsdl-first/pom.xml
@@ -54,6 +54,11 @@
                   <path>/${project.build.finalName}</path>
                </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+            </plugin>
         </plugins>
     </build>
 
