--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -166,6 +166,11 @@
                         <generateReports>false</generateReports>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.1</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
