TESB-24592 Upgrade to ActiveMQ 5.15.8

--- a/examples/tesb/camel-jmx/service/pom.xml
+++ b/examples/tesb/camel-jmx/service/pom.xml
@@ -43,7 +43,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
-			<artifactId>activemq-camel</artifactId>
+			<artifactId>activemq-osgi</artifactId>
 			<version>${activemq.version}</version>
 		</dependency>
 		<dependency>
