--- a/examples/tesb/ebook/ebook-connectionfactory/pom.xml
+++ b/examples/tesb/ebook/ebook-connectionfactory/pom.xml
@@ -13,7 +13,7 @@
   	<dependency>
   		<groupId>org.apache.activemq</groupId>
   		<artifactId>activemq-pool</artifactId>
-  		<version>5.12.2</version>
+  		<version>${activemq.version}</version>
   	</dependency>
   </dependencies>
 </project>
