--- a/examples/tesb/ebook/ebook-importer/pom.xml
+++ b/examples/tesb/ebook/ebook-importer/pom.xml
@@ -30,12 +30,12 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-client</artifactId>
-            <version>5.12.0</version>
+            <version>${activemq.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-pool</artifactId>
-            <version>5.12.0</version>
+            <version>${activemq.version}</version>
         </dependency>
 
         <dependency>
