--- a/examples/tesb/ebook/ebook-importer/pom.xml
+++ b/examples/tesb/ebook/ebook-importer/pom.xml
@@ -1,12 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <relativePath>..</relativePath>
         <groupId>org.talend.esb.examples.ebook</groupId>
         <artifactId>ebook</artifactId>
         <version>7.2.1-SNAPSHOT</version>
     </parent>
+
     <artifactId>ebook-importer</artifactId>
     <packaging>bundle</packaging>
 
@@ -19,12 +21,12 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
-            <version>2.15.3</version>
+            <version>${camel.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jms</artifactId>
-            <version>2.15.3</version>
+            <version>${camel.version}</version>
             <type>bundle</type>
         </dependency>
         <dependency>
@@ -41,7 +43,7 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-test</artifactId>
-            <version>2.15.3</version>
+            <version>${camel.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
