--- a/examples/tesb/ebook/ebook-itests/pom.xml
+++ b/examples/tesb/ebook/ebook-itests/pom.xml
@@ -8,12 +8,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.talend.esb.examples.ebook</groupId>
         <artifactId>ebook</artifactId>
         <version>7.2.1-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
+
     <artifactId>ebook-itests</artifactId>
 
     <properties>
@@ -24,13 +26,13 @@
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
-            <version>5.0.0</version>
+            <version>${osgi.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.compendium</artifactId>
-            <version>5.0.0</version>
+            <version>${osgi.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -51,7 +53,7 @@
         <dependency>
             <groupId>org.apache.karaf.features</groupId>
             <artifactId>enterprise</artifactId>
-            <version>4.0.2</version>
+            <version>${karaf.version}</version>
             <type>xml</type>
             <classifier>features</classifier>
             <scope>test</scope>
@@ -91,7 +93,7 @@
         <dependency>
             <groupId>org.ops4j.pax.url</groupId>
             <artifactId>pax-url-aether</artifactId>
-            <version>1.6.0</version>
+            <version>2.5.4</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
