--- a/examples/tesb/ebook/pom.xml
+++ b/examples/tesb/ebook/pom.xml
@@ -14,11 +14,6 @@
     <artifactId>ebook</artifactId>
     <packaging>pom</packaging>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <cxf.version>3.2.6</cxf.version>
-    </properties>
-
     <modules>
         <module>ebook-backend</module>
         <module>ebook-connectionfactory</module>
@@ -33,7 +28,7 @@
         <dependency>
             <groupId>org.ops4j.pax.cdi</groupId>
             <artifactId>pax-cdi-api</artifactId>
-            <version>1.0.0.RC1</version>
+            <version>1.0.0.RC2</version>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -56,31 +51,31 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.7</version>
+            <version>${slf4j.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
-            <version>4.3.1</version>
+            <version>${osgi.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.compendium</artifactId>
-            <version>4.3.1</version>
+            <version>${osgi.version}</version>
         </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
-            <version>1.7.7</version>
+            <version>${slf4j.version}</version>
             <scope>test</scope>
         </dependency>
 
