--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -55,11 +55,12 @@
         <cxf.version>3.2.6</cxf.version>
         <cxf.xjc.version>3.2.2</cxf.xjc.version>
         <camel.version>2.21.2</camel.version>
-        <spring.version>4.3.18.RELEASE</spring.version>
-        <karaf.version>4.1.6</karaf.version>
+        <spring.version>5.1.3.RELEASE</spring.version>
+        <karaf.version>4.2.3</karaf.version>
         <activemq.version>5.15.8</activemq.version>
-        <osgi.version>4.3.1</osgi.version>
-        <eclipse.osgi.version>3.8.0.v20120529-1548</eclipse.osgi.version>
+        <osgi.version>6.0.0</osgi.version>
+        <osgi.compendium.version>5.0.0</osgi.compendium.version>
+        <eclipse.osgi.version>3.12.100</eclipse.osgi.version>
         <zookeeper.version>3.4.13</zookeeper.version>
         <derby.version>10.14.2.0</derby.version>
         <aries.version>1.0.0</aries.version>
