--- a/examples/tesb/rent-a-car/app-reservation/pom.xml
+++ b/examples/tesb/rent-a-car/app-reservation/pom.xml
@@ -32,7 +32,7 @@
             <version>${karaf.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.eclipse</groupId>
+            <groupId>org.eclipse.platform</groupId>
             <artifactId>org.eclipse.osgi</artifactId>
             <version>${eclipse.osgi.version}</version>
         </dependency>
