--- a/pom.xml
+++ b/pom.xml
@@ -94,8 +94,8 @@
         <cxf.version>3.2.6</cxf.version>
         <camel.version>2.21.2</camel.version>
         <activemq.version>5.15.8</activemq.version>
-        <spring.version>4.3.18.RELEASE</spring.version>
-        <karaf.version>4.1.6</karaf.version>
+        <spring.version>5.1.4.RELEASE</spring.version>
+        <karaf.version>4.2.3</karaf.version>
         <decanter.version>2.1.0</decanter.version>
         <zookeeper.version>3.4.13</zookeeper.version>
         <derby.version>10.14.2.0</derby.version>
@@ -113,10 +113,10 @@
         <commons-beanutils.version>1.8.3_1</commons-beanutils.version>
         <commons-jxpath.version>1.3</commons-jxpath.version>
         <jdom.bundle.version>1.1_4</jdom.bundle.version>
-        <osgi.core.version>4.3.1</osgi.core.version>
-        <osgi.compendium.version>${osgi.core.version}</osgi.compendium.version>
-        <jetty.version>9.3.24.v20180605</jetty.version>
-        <pax-web-jsp.version>6.0.11</pax-web-jsp.version>
+        <osgi.core.version>6.0.0</osgi.core.version>
+        <osgi.compendium.version>5.0.0</osgi.compendium.version>
+        <jetty.version>9.4.12.v20180830</jetty.version>
+        <pax-web-jsp.version>7.2.8</pax-web-jsp.version>
         <oscache.bundle.version>2.4_5</oscache.bundle.version>
         <cglib.bundle.version>3.2.4_1</cglib.bundle.version>
         <ibatis-sqlmap.bundle.version>2.3.4.726_4</ibatis-sqlmap.bundle.version>
