--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -662,15 +662,6 @@
                                     <outputDirectory>target/dependencies</outputDirectory>
                                     <destFileName>cxf-rt-transports-http-${cxf.version}-TESB.jar</destFileName>
                                 </artifactItem>
-                                <!-- patch for camel-cxf (TESB-23301) -->
-                                <artifactItem>
-                                    <groupId>org.apache.camel</groupId>
-                                    <artifactId>camel-cxf</artifactId>
-                                    <version>${camel.version}</version>
-                                    <classifier>TESB</classifier>
-                                    <outputDirectory>target/dependencies</outputDirectory>
-                                    <destFileName>camel-cxf-${camel.version}-TESB.jar</destFileName>
-                                </artifactItem>
                                 <!-- patch for decanter bundles (TESB-23679, TESB-23697) -->
                                 <artifactItem>
                                     <groupId>org.apache.karaf.decanter</groupId>
@@ -808,7 +799,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.7</version>
+				<version>1.8</version>
 				<executions>
 					<execution>
 						<id>collect-add-ons</id>
@@ -925,14 +916,11 @@
                             <target>
                                 <replace file="target/dependencies/apache-camel-${camel.version}-features.xml">
                                     <replacefilter
-                                        token="apache-cxf/3.2.5/xml/features"
+                                        token="apache-cxf/3.2.7/xml/features"
                                         value="apache-cxf/${cxf.version}/xml/features"/>
                                     <replacefilter
                                         token="pax-cdi-features/1.0.0.RC1/xml/features"
                                         value="pax-cdi-features/${pax-cdi.version}/xml/features"/>
-                                    <replacefilter
-                                        token="org.apache.zookeeper/zookeeper/3.4.8"
-                                        value="org.apache.zookeeper/zookeeper/${zookeeper.version}"/>
                                     <!-- patch for xalan and xerces version -->
                                     <replacefilter>
                                         <replacetoken>&lt;bundle dependency='true'&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xalan/2.7.2_3&lt;/bundle&gt;</replacetoken>
@@ -957,10 +945,10 @@
                                     <replacefilter
                                         token="&gt;mvn:com.fasterxml.jackson.core/jackson-databind/2.9.5&lt;"
                                         value="&gt;mvn:com.fasterxml.jackson.core/jackson-databind/2.9.6&lt;"/>
-                                    <!-- patch for camel-cxf (TESB-23301) -->
+                                    <!-- patch CAMEL-13241 -->
                                     <replacefilter
-                                        token="&gt;mvn:org.apache.camel/camel-cxf/${camel.version}&lt;"
-                                        value="&gt;mvn:org.apache.camel/camel-cxf/${camel.version}/jar/TESB&lt;"/>
+                                        token="${backport-util-concurrent-version}"
+                                        value="3.1"/>
                                 </replace>
                                 <!-- Patch jetty version range in Camel features (TESB-18114/CAMEL-10433) -->
                                 <replaceregexp byline="false" flags="gim"
